# rust-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  main.rs  my_file.csv
.github/workflows/: main.yml
migrations/2022-07-23-170536_create_posts/: up.sql
src/: ddbb.rs  fundamentals.rs  lifetime.rs  main.rs  match.rs  models.rs  scope_example.rs
statics/css/: navbar-top-fixed.css
templates/: index.html  post.html  tera_test.html
wasm/: Cargo.toml  index.html
wasm/src/: lib.rs
