[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
csv = "1.1.6"
date = "0.1.3"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
json = "0.12"
regex = "1.6.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
tera = "1.10.0"
